# clio

./: .gitignore  LICENSE  README.md  STATUS.md  constitution.md  pyproject.toml
clio/: __init__.py  cli.py  pareto.py  strategy.py
docs/: BACKTEST.md  CEILING.md  DEPLOYMENT.md  LIVE_RUN.md  LIVE_RUN_V2.md  LIVE_RUN_V3.md  LLM_RUN.md  POLYMARKET.md  REDTEAM.md  RESEARCHER.md
examples/: run_backtest.py
paper_trades/: 2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  (+53 more)
research_proposals/: 2026-04-28.json  2026-05-03.json  2026-05-10.json  2026-05-17.json  2026-05-24.json  2026-05-31.json  2026-06-07.json  2026-06-14.json  2026-06-21.json  2026-06-28.json  2026-07-05.json  2026-07-12.json  2026-07-19.json  snapshot_2026-04-28.json  snapshot_2026-05-03.json  snapshot_2026-05-10.json  snapshot_2026-05-17.json  snapshot_2026-05-24.json  snapshot_2026-05-31.json  snapshot_2026-06-07.json  snapshot_2026-06-14.json  snapshot_2026-06-21.json  (+4 more)
(+110 files in other folders)
